# aimonorepo

./: .gitignore
hgfc_audio/: main.py  pyproject.toml
hgfc_image/: hgfc_image_gen.py  hgfc_image_gen_t.py  image2image.py  main.py  pyproject.toml
huggingfaceproj/: hgfc_pipeline.py  hgfc_pipeline_2.py  main.py  pyproject.toml
langchainprj/: .gitignore  _proj_embedding.py  _proj_rag.py  _proj_vector_db.py  main.py  main_gradio copy.py  main_gradio.py  main_rag.py  main_rag_with_history.py  main_vectordb.py  pyproject.toml  readme.md  readme_eval.md  save_response.md
langchainprj/documents/: maryann_seed_data.txt
langchainprj/eval/: __init__.py  llm_eval.py  main_eval.py  retriever_eval.py  test.py  tests.jsonl
langchainprj/scratch/: check_prompt.py  debug_queries.py  debug_retrieval.py  find_rank.py  fix_prompt.py  fix_prompt2.py  inspect.py  inspect2.py  test_llm.py  test_simpler.py  verify_fix.py
langchainprj/src/: _get_llm.py  _proj_rag.py  _rerank_chunks.py  main_gradio.py  query_db.py
llm_engineering/: pyproject.toml
llm_engineering/week1/: day1.ipynb  day2.ipynb  day4.ipynb  day5.ipynb
llm_engineering/week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
llm_engineering/week2/.gradio/flagged/: dataset1.csv
llm_engineering/week3/: day1.ipynb  day1_self1.ipynb
neuralnetworks/: pyproject.toml  readme.md
neuralnetworks/src/neuralnetworks/: main.py
prjcostprediction/: llm_results.json  pyproject.toml
prjcostprediction/scratch/: check_dist.py  check_prices.py
prjcostprediction/src/prjcostprediction/: __init__.py  config.py  main.py  ref_config.py
prjcostprediction/src/prjcostprediction/dataprep/: __init__.py
prjcostprediction/src/prjcostprediction/dataprep/dataanalysis/: check_parquet.py  data_sampling.py  plot_data.py
prjcostprediction/src/prjcostprediction/dataprep/dataops/: _create_category_cache_files.py  _create_deduped_final_file.py  _hf_data_download.py  _unzip_data_files.py  main_data_pipeline.py  main_weighted_adjustment.py  parser.py
prjcostprediction/src/prjcostprediction/dataprep/finaldata/: create_data_for_model.py
prjcostprediction/src/prjcostprediction/domain/: __init__.py  items.py
prjcostprediction/src/prjcostprediction/llm/: call_llm_with_files copy.py  call_llm_with_files.py  download_ed_donner.py  generate_training_data_json.py  tmp.py
tokenizersprj/: README.md  main.py  output_no_quant.md  output_quant.md  prod_grade_llm_call.py  prod_grade_llm_call_noquant.py  prod_grade_llm_call_quant.py  pyproject.toml
udeeplearning/: pyproject.toml
udeeplearning/Course+Materials/10 - First Neuron/: manual.py  neuron.py  neuron_dtype.py  tensor1.py  tensor2.py  tensor_dtype.py  tensor_matrix.py
udeeplearning/Course+Materials/14 - Training Neuron/: batch_learning.py  training_neuron.py  training_neuron2.py  training_neuron_start.py
udeeplearning/Course+Materials/20 - Car Prices/: exercise.ipynb  exercise_solution.py  first_steps.ipynb  model_loading.py  model_saving.py  neuron.py  neuron2.py  neuron_normalized.py  neuron_normalized2.py  pandas.ipynb  pandas2.ipynb  pandas3.ipynb  problem.py  visualizing_loss.py
udeeplearning/Course+Materials/25 - Spam/: _neuron_bart.py  cv.py  embeddings.py  embeddings2.py  explore.ipynb  n1_neuron1.py  n2_neuron_sigmoid.py  neuron_embedding.py  neuron_evaluate.py  neuron_test.py  neuron_train_val.py  sigmoid.ipynb  tf-idf.py  transformer.py
udeeplearning/Course+Materials/30 - From Neuron to Network/: network1.py  network2.py  network_adam.py  network_batch.py  network_batch2.py  network_relu.py  network_sequential.py  neuron.py
udeeplearning/Course+Materials/31 - Exercise Loan Approval/: explore.ipynb  get_dummies.ipynb  solution.py  solution2.py  solution_start.py
udeeplearning/Course+Materials/35 - Handwritten Digits/: 0_not0.py  0_not0_evaluate.py  10_outputs.py  10_outputs2.py  data.ipynb  inference.py  inference2.py  larger.py  larger2.py  overfitting.py  overfitting_loss.ipynb  overfitting_solution.ipynb  preparing.ipynb  saving.py  softmax.py
udeeplearning/Course+Materials/40 - CNN/: _dropout.py  backends.py  baseline.ipynb  batchnorm.py  cnn.py  cnn2.py  cnn_start.py  devices.py  dropout.py  exploring.ipynb  final.py  final_load.py  maxpooling.py  maxpooling_gpu.py  model_devices.py  multi_conv2d.py  multi_conv2d_larger.py
udeeplearning/Course+Materials/50 - Tire/: generate.ipynb  gpu_tensor.py  loading.py  model.py  model_generate.py  model_training.py  model_training2.py  model_training3.py  model_transfer.py
udeeplearning/Course+Materials/50 - Tire/resnet/: resnet.py
udeeplearning/Course+Materials/60 - Deployment/: app.py  image_upload.py  run.py  run_share.py  run_start.py
udeeplearning/src/fittransform/: fit_transform.py
udemysatya/.obsidian/: workspace.json
udemysatya/PythonforDS/: Exception Handling.ipynb  zpractice1.ipynb
