[project]
name = "hgfc-audio"
version = "0.1.0"
description = "Text-to-Audio using Hugging Face Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "scipy",
    "soundfile",
    "accelerate",
]



[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }


