[project]
name = "langchainprj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub",
    "transformers>=4.43.0",
    "python-dotenv",
    "IPython",
    "ipykernel",
    "torch>=2.0.0",
    "accelerate>=0.24.1",
    "bitsandbytes>=0.41.3",
    "langchain-community>=0.4.1",
    "pypdf>=6.10.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.14.3",
    "numpy>=1.24.0",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=3.0.1",
    "chromadb>=1.2.1",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
